--- a/views/shop.pug
+++ b/views/shop.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title My Shop
+        title #{docTitle}
         link(rel="stylesheet", href="/css/product.css")
         link(rel="stylesheet", href="/css/main.css")
     body
@@ -15,3 +15,19 @@ html(lang="en")
                         a.active(href="/") shop 
                     li.main-header__item
                         a(href="/admin/add-Item") Add Product 
+        main
+            .grid
+                if prods.length > 0
+                    each product in prods 
+                        article.card.product-item
+                            header.card__header
+                                h1.product__title #{product.title}
+                            div.card__image
+                                img(src="http://smartmobilestudio.com/wp-content/uploads/2012/06/leather-book-preview.png", alt="book image")
+                            div.card__content
+                                h2.product__price $92.2
+                                p.product__description A very interesting book I ever have read 
+                            .card__actions  
+                                button.btn Add to Cart 
+                else
+                    h1 No Products 
