--- a/views/add-Items.ejs
+++ b/views/add-Items.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Product</title>
+    <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
@@ -16,7 +16,7 @@
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/">Shop</a></li>
-                <li class="main-header__item"><a class="active" href="/add-Item">Add Product</a></li>
+                <li class="main-header__item"><a href="/admin/add-Item">Add Product</a></li>
             </ul>
         </nav>
     </header>
