Added some extra options in application like cart order etc. now in next will deal with ordering and clicking particular detail of a product

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -101,6 +101,12 @@ main {
   cursor: pointer;
 }
 
+.link-btn{
+  text-decoration: none;
+  padding: 5px;
+
+}
+
 .btn:hover,
 .btn:active {
   background-color: #00695c;
