--- a/views/shop/order.ejs
+++ b/views/shop/order.ejs
@@ -22,7 +22,9 @@
             </ul>
         </nav>
     </header>
-    <h1>Page Not Found!</h1>
+    <main>
+        <h1>Order</h1>
+    </main>
 </body>
 
 </html>
