--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -15,11 +15,14 @@
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/">Shop</a></li>
+                <li class="main-header__item"><a href="/products">Products</a></li>
+                <li class="main-header__item"><a href="/cart">Cart</a></li>
+                <li class="main-header__item"><a href="/order">Order</a></li>
                 <li class="main-header__item"><a href="/admin/add-Item">Add Product</a></li>
+                <li class="main-header__item"><a href="/admin/products">Admin Products</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
         <% if (prods.length>0) { %>
         <div class="grid">
@@ -29,14 +32,17 @@
                         <h1 class="product__title"><%=product.title%></h1>
                     </header>
                     <div class="card__image">
-                        <img src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book">
+                        <img src=<%=product.imageUrl %> alt="A Book">
                     </div>
                     <div class="card__content">
-                        <h2 class="product__price">$19.99</h2>
-                        <p class="product__description">A very interesting book about so many even more interesting things!</p>
+                        <h2 class="product__price">$<%=product.price %></h2>
+                        <p class="product__description"><%=product.description %>!</p>
                     </div>
                     <div class="card__actions">
-                        <button class="btn">Add to Cart</button>
+                        <a href="/admin/edit-product" class="btn link-btn">Edit Product</a>
+                        <form action="/admin/delete-product" method="POST">
+                            <button class="btn" type="submit">Delete Product</button>
+                        </form>
                     </div>
                 </article>
             <% } %>                      
@@ -46,5 +52,4 @@
             <% } %>
     </main>
 </body>
-
 </html>
