--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
@@ -22,7 +23,6 @@
             </ul>
         </nav>
     </header>
-    <h1>Page Not Found!</h1>
+    <h1>Checkout Page</h1>
 </body>
-
 </html>
