--- a/views/shop/product-details.ejs
+++ b/views/shop/product-details.ejs
@@ -23,6 +23,26 @@
             </ul>
         </nav>
     </header>
-    <h1>Product details</h1>
+    <main>
+        <div class="grid">
+                <article class="card product-item">
+                    <header class="card__header">
+                        <h1 class="product__title"><%=prods.title%></h1>
+                    </header>
+                    <div class="card__image">
+                        <img src=<%=prods.imageUrl %> alt="A Book">
+                    </div>
+                    <div class="card__content">
+                        <h2 class="product__price">$<%=prods.price %></h2>
+                        <p class="product__description"><%=prods.description %>!</p>
+                    </div>
+                    <div class="card__actions">
+                        <form action="/add-to-cart" method="POST">
+                            <button class="btn" type="submit">Add to Cart</button>
+                        </form>
+                    </div>
+                </article>                     
+        </div>
+    </main>
 </body>
 </html>
